modify getRevenueByDate api